css lessons begin

--- a/index.html
+++ b/index.html
@@ -4,27 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>seax domm</title>
+    <link rel="stylesheet" href="/CSS/index.css" />
+
 </head>
 <body>
-    <nav style="background-color: darkslateblue;">
+    <nav style=" padding: 10px; margin: 10px;">
         <h1>SEAX COMMUNICATION</h1>
-        <ul>
+        <ol>
             <li>HOME</li>
             <li>ABOUT</li>
             <li>GOODS</li>
             <li>Help</li>
-        </ul>
+        </ol>
+
+        <a target="_parent" href="https://www.google.com"> Go to google</a>
 
     </nav>
 
-    <div>
+    <div id="welcome_text_1" class="welcome_text">
         <h2>WELCOME TO SEAX COMMUNICATION</h2>
         <p>Here at seax communication we offer you the best garget</p>
         <P>looking for one of the most realiable place to get your garget we got you covered</P>
         <button style="background-color: blue;">
             submit
         </button>
-
     </div>
 
     <div>
