--- a/index.html
+++ b/index.html
@@ -6,46 +6,25 @@
     <title>seax domm</title>
     <link rel="stylesheet" href="/CSS/index.css" />
 
+   <!-- THIS IS THE ROBOTO FONT LINK -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav style=" padding: 10px; margin: 10px;">
-        <h1>SEAX COMMUNICATION</h1>
-        <ol>
-            <li>HOME</li>
-            <li>ABOUT</li>
-            <li>GOODS</li>
-            <li>Help</li>
-        </ol>
 
-        <a target="_parent" href="https://www.google.com"> Go to google</a>
+    <div class="welcome_text">
 
-    </nav>
-
-    <div id="welcome_text_1" class="welcome_text">
-        <h2>WELCOME TO SEAX COMMUNICATION</h2>
+        <h1 class="header-text">WELCOME TO SEAX COMMUNICATION</h1>
+        
+        <h2>You one stop shop for all things Gadgets</h2>
         <p>Here at seax communication we offer you the best garget</p>
         <P>looking for one of the most realiable place to get your garget we got you covered</P>
-        <button style="background-color: blue;">
-            submit
+        <button>
+            Explore
         </button>
-    </div>
-
-    <div>
-        <main style="background-color: darksalmon;">
-            <p>we got you covered</p>
-            <p>your number one plug</p>
-            <p>always at your service</p>
-
-        </main>
-
-        <aside style="background-color: brown;">
-            <p>phones</p>
-            <p>laptops</p>
-            <p>accessories</p>
-
-        </aside>
-
 
     </div>
+
 </body>
 </html>
