button and text styling

--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
 </head>
 <body>
 
-    <div class="welcome_text">
+    <div class="container">
 
-        <h1 class="header-text">WELCOME TO SEAX COMMUNICATION</h1>
-        
-        <h2>You one stop shop for all things Gadgets</h2>
-        <p>Here at seax communication we offer you the best garget</p>
+        <h1 class="header-text">welcome to saex communication my guy </h1>
+        <h2 class="sub-heading">You one stop shop for all things Gadgets</h2>
+
+        <p class="message">Here at seax communication we offer you the best garget</p>
+
         <P>looking for one of the most realiable place to get your garget we got you covered</P>
-        <button>
+
+        <button class="btn">
             Explore
         </button>
 
