--- a/index.html
+++ b/index.html
@@ -10,23 +10,38 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
 <body>
+    <main class="container">
+        <!-- NAVIGATION BAR -->
+        <header class="navbar"> 
+            <!-- LOGO GROUP -->
+             <div class="logo-group">
+                <img src="./assets/logo.svg" class="logo-image"/>
+                <h1 class="logo-text">CODERS  <span class="logo-span">GYM</span></h1>
+             </div>
 
-    <div class="container">
+             <!-- NAVIGATION LINK GROUP -->
+             <ul class="nav-link-group">
+                <li>Home</li>
+                <li>Trainer</li>
+                <li>Programs</li>
+                <li>Blogs</li>
+                <li>Pricing</li>
+             </ul>
 
-        <h1 class="header-text">welcome to saex communication my guy </h1>
-        <h2 class="sub-heading">You one stop shop for all things Gadgets</h2>
+             <!-- ICONS AND BUTTON GROUP -->
+             <div class="icon-btn-group">
+                <img src="./assets/search.svg" class="icon-image"/>
+                <img src="./assets/shopping-cart.svg" class="icon-image"/>
+                <button class="nav-btn">
+                    Login
+                </button>
+             </div>
+        </header>
 
-        <p class="message">Here at seax communication we offer you the best garget</p>
 
-        <P>looking for one of the most realiable place to get your garget we got you covered</P>
-
-        <button class="btn">
-            Explore
-        </button>
-
-    </div>
-
+    </main>
 </body>
 </html>
