Box model lesson

--- a/index.html
+++ b/index.html
@@ -41,6 +41,30 @@
              </div>
         </header>
 
+        <!-- THIS IS THE MAIN PAGE AREA -->
+
+        <div class="main-container">
+            <div class="box">
+
+            </div>
+            <br />
+            <div class="box">
+
+            </div>
+            <br />
+            <div class="box1">
+
+            </div>
+            <br />
+            <div class="box">
+
+            </div>
+            <br />
+            <div class="box">
+
+            </div>
+        </div>
+
 
     </main>
 </body>
